--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
+title: nkkk
 subtitle: 个人站
-description: 欢迎来到我的个人站~
+description: welcome
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: kk
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: 无
+url: "http://www.xiaobaozi.xyz"
 
 # Comment
 comment:
@@ -15,31 +15,21 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    weibo: 无 
+    github: inkpgk
     # twitter: 
-    mail: leopardpan@icloud.com
+    mail: 无
 
 # 百度统计 
-# 使用博客模板请去掉或者更换 id 
 baidu:
-    id: 8ba1c6be0953b6f9c2ba38e57f615421  
+      
 
 # Google Analytics
-# 使用博客模板请去掉或者更换 id
-ga:
-    id: UA-84134159-3   
+ga:  
     host: auto  
 
 
-# 《----------------- 上面的信息修改成你自己的 ---------------------------》
-#
-#
-#  _post/ 下的文章更换成你自己的文章
-#  帮忙star一下，感谢~😆 地址： https://github.com/leopardpan/leopardpan.github.io
-#
-#
-# 《--------------- 下面的信息可以自行选择是否修改 ------------------------》
+
 
 
 permalink: /:year/:month/:title/
