--- a/_config.yml
+++ b/_config.yml
@@ -8,14 +8,10 @@ avatarTitle: kk
 avatarDesc: 无
 url: "http://www.xiaobaozi.xyz"
 
-# Comment
-comment:
-    disqus: leopard
-    # uyan: 2143225  # 有言id,登录有言官网申请
 
 # Social
 social:
-    weibo: 无 
+    weibo: 彭彭国库 
     github: inkpgk
     # twitter: 
     mail: 无
