--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ url: "http://www.xiaobaozi.xyz"
 
 # Social
 social:
-    weibo: 彭彭国库 
+    weibo: 5761346728 
     github: inkpgk
     # twitter: 
     mail: 无
